Refactor codebase and assets: remove unused imports, add Robo Elf oxidation textures, fix typos, and version updated to 1.0.1